[gd_scene load_steps=7 format=3 uid="uid://dg8w0woeegm0n"]

[ext_resource type="PackedScene" uid="uid://b1og747hsnjrt" path="res://app/ui/menu/menu_button.tscn" id="1_tc77p"]
[ext_resource type="Script" path="res://models/live2d/live_2d_model.gd" id="2_mbv38"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jmqv"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_right = 8
corner_radius_bottom_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjdin"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qeowa"]
font_size = 11

[sub_resource type="ViewportTexture" id="ViewportTexture_y460c"]
viewport_path = NodePath("Environment/Live2DModel/Sprite/CubismModel")

[node name="Scene" type="Node"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuBar" type="Panel" parent="UI"]
clip_contents = true
custom_minimum_size = Vector2(42, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_bottom = 0.9
offset_bottom = 5.83197
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1jmqv")

[node name="Container" type="VBoxContainer" parent="UI/MenuBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButton" parent="UI/MenuBar/Container" instance=ExtResource("1_tc77p")]
layout_mode = 2

[node name="MenuTooltip" type="HBoxContainer" parent="UI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 54.0
offset_top = 64.0
offset_right = 181.0
offset_bottom = 89.0
theme_override_constants/separation = 0

[node name="Arrow" type="Panel" parent="UI/MenuTooltip"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cjdin")

[node name="Panel" type="Panel" parent="UI/MenuTooltip"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_cjdin")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MenuTooltip/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/MenuTooltip/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tooltip text"
label_settings = SubResource("LabelSettings_qeowa")
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Environment" type="Node2D" parent="."]

[node name="Live2DModel" type="Node2D" parent="Environment"]
position = Vector2(500, 400)
script = ExtResource("2_mbv38")

[node name="Sprite" type="Sprite2D" parent="Environment/Live2DModel"]
position = Vector2(352, 45)
texture = SubResource("ViewportTexture_y460c")

[node name="CubismModel" type="CubismModel" parent="Environment/Live2DModel/Sprite"]
assets = "res://ClouddleBlackCat_VTS/clouddle blackcat.model3.json"
anim_loop = false
anim_loop_fade_in = true
anim_expression = ""
anim_motion = ""
Param = -0.0178224
Param2 = 0.351772
Param3 = -0.104266
Param4 = -0.0178224
Param5 = 0.351772
Param6 = -0.104266
ParamEyeLOpen = 1.0
ParamEyeLSmile = 0.0
ParamEyeROpen = 1.0
ParamEyeRSmile = 0.0
ParamEyeBallX = 0.0
ParamEyeBallY = 0.0
ParamBrowLY = 0.0
ParamBrowLForm = 0.0
ParamBrowRY = 0.0
ParamBrowRForm = 0.0
Param20 = 0.0
Param27 = 0.0
Param26 = 0.0
Param25 = 0.0
Param24 = 0.0
Param23 = 0.0
Param22 = 0.0
Param21 = 0.0
Param7 = -0.0277718
Param8 = -0.756643
Param11 = -0.623954
Param9 = -0.520876
Param10 = -0.916186
Param12 = 0.379145
Param13 = -0.749547
Param14 = -0.918118
Param15 = 1.18825
Param16 = 0.799967
Param17 = 0.519307
Param18 = -0.223766
Param19 = -0.295552
Param28 = 1.18825
Param29 = 0.799967
Param30 = 0.519307
Param31 = -0.223766
Param32 = -0.295552
ParamAngleX = 4.76575
ParamAngleY = 3.82396
ParamAngleZ = 3.63171
ParamMouthForm = 0.0
ParamMouthOpenY = 0.0
ParamCheek = 0.0
ParamBodyAngleX = 0.57122
ParamBodyAngleY = 0.0
ParamBodyAngleZ = 0.0
ParamBreath = 0.495974
ParamHairFront = 0.0
ParamHairSide = 0.0
ParamHairBack = 0.0
Part = 1.0
Part2 = 1.0
Part8 = 1.0
Part7 = 1.0
Part4 = 1.0
Part3 = 1.0
Part5 = 1.0
face3 = 1.0
iris2 = 1.0
iris = 1.0
disable_3d = true
transparent_bg = true
gui_disable_input = true
render_target_update_mode = 4

[node name="CubismEffectBreath" type="CubismEffectBreath" parent="Environment/Live2DModel/Sprite/CubismModel"]

[node name="CubismEffectEyeBlink" type="CubismEffectEyeBlink" parent="Environment/Live2DModel/Sprite/CubismModel"]

[node name="FileDialog" type="FileDialog" parent="Environment/Live2DModel"]
disable_3d = true
title = "Open a File"
initial_position = 2
always_on_top = true
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.model3.json")

[node name="OptionsWindow" type="Window" parent="Environment/Live2DModel"]
disable_3d = true
title = "Live2D Model Options"
initial_position = 2
size = Vector2i(380, 280)
transient = true
always_on_top = true

[node name="Panel" type="Panel" parent="Environment/Live2DModel/OptionsWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="VBoxContainer" parent="Environment/Live2DModel/OptionsWindow/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadModelButton" type="Button" parent="Environment/Live2DModel/OptionsWindow/Panel/Container"]
layout_mode = 2
text = "Load Model"

[connection signal="file_selected" from="Environment/Live2DModel/FileDialog" to="Environment/Live2DModel" method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="Environment/Live2DModel/OptionsWindow/Panel/Container/LoadModelButton" to="Environment/Live2DModel" method="open_model_file_dialog"]
